--- a/SCME.ProfileBuilder/App.config
+++ b/SCME.ProfileBuilder/App.config
@@ -43,40 +43,40 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup>
   <applicationSettings>
     <SCME.ProfileBuilder.Properties.Settings>
-      <setting name="SinglePositionModuleMode" serializeAs="String">
-        <value>True</value>
-      </setting>
       <setting name="CurrentCulture" serializeAs="String">
         <value>ru-RU</value>
       </setting>
-      <setting name="IsTouch" serializeAs="String">
-        <value>True</value>
-      </setting>
-    </SCME.ProfileBuilder.Properties.Settings>
-  </applicationSettings>
-  <userSettings>
-    <SCME.ProfileBuilder.Properties.Settings>
       <setting name="MSSQLServer" serializeAs="String">
-        <value />
+        <value>IVAN-PC\SQLEXPRESS01</value>
       </setting>
       <setting name="MSSQLDatabase" serializeAs="String">
-        <value />
+        <value>SCME_ResultsDB</value>
       </setting>
       <setting name="MSSQLIntegratedSecurity" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="MSSQLUserId" serializeAs="String">
-        <value />
+        <value>sa</value>
       </setting>
       <setting name="SQLiteFileName" serializeAs="String">
-        <value />
+        <value>C:\Users\Ivan\Desktop\Работа\mme_softwareUS03\bin\Db\SCME_ResultsDB_Local.sqlite</value>
       </setting>
-      <setting name="Accent" serializeAs="String">
-        <value />
+      <setting name="SQLTimeout" serializeAs="String">
+        <value>5</value>
       </setting>
-      <setting name="Theme" serializeAs="String">
-        <value />
+      <setting name="IsTouch" serializeAs="String">
+        <value>True</value>
       </setting>
+      <setting name="TypeDb" serializeAs="String">
+        <value>MSSQL</value>
+      </setting>
+      <setting name="MSSQLPassword" serializeAs="String">
+        <value>qwerty_123</value>
+      </setting>
+    </SCME.ProfileBuilder.Properties.Settings>
+  </applicationSettings>
+  <userSettings>
+    <SCME.ProfileBuilder.Properties.Settings>
       <setting name="LastSelectedMMECode" serializeAs="String">
         <value>MME005</value>
       </setting>
