--- a/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
+++ b/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
@@ -90,8 +90,8 @@
     </Compile>
     <Compile Include="CustomControls\DragGrid.cs" />
     <Compile Include="CustomControls\NumericUpDown.cs" />
-    <Compile Include="CustomControls\ProfilesPage.xaml.cs">
-      <DependentUpon>ProfilesPage.xaml</DependentUpon>
+    <Compile Include="CustomControls\PanelButton.xaml.cs">
+      <DependentUpon>PanelButton.xaml</DependentUpon>
     </Compile>
     <Compile Include="CustomControls\TextBoxWithTimer.cs" />
     <Compile Include="DataProviders\TestParameterDictionary.cs" />
@@ -108,6 +108,9 @@
     <Compile Include="IValueConverters\TDcFallRateValueFromEnum.cs" />
     <Compile Include="IValueConverters\TOsvRateValueFromEnum.cs" />
     <Compile Include="IValueConverters\TypeTestParameterToString.cs" />
+    <Compile Include="Pages\ProfilesPage.xaml.cs">
+      <DependentUpon>ProfilesPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ResourceBinding.cs" />
     <Compile Include="ViewModels\EditProfileVm.cs" />
     <Compile Include="ViewModels\MmeCodeCheckboxDataTemplateVm.cs" />
@@ -127,10 +130,7 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="CustomControls\DialogWindow.xaml" />
-    <Page Include="CustomControls\ProfilesPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
+    <Page Include="CustomControls\PanelButton.xaml" />
     <Page Include="DataTemplates\MmeCodeCheckboxDataTemplate.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -228,6 +228,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\ProfilesPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Resources\Icons.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -323,6 +327,17 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="MarkupExtension\" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="mscorlib">
+      <Guid>{BED7F4EA-1A96-11D2-8F08-00A0C9A6186D}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>4</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.6.0.0\build\Fody.targets" Condition="Exists('..\packages\Fody.6.0.0\build\Fody.targets')" />
