--- a/SCME.Types/SCME.TYPES.csproj
+++ b/SCME.Types/SCME.TYPES.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Commutation\AttributesHelper.cs" />
     <Compile Include="Commutation\TypeCommutation.cs" />
     <Compile Include="ConstantsMinMax.cs" />
+    <Compile Include="Consts.cs" />
     <Compile Include="ControlServerContracts.cs" />
     <Compile Include="BVT\HALTypeBVT.cs" />
     <Compile Include="ControlServerProxy.cs" />
