--- a/SCME.ProfileBuilder/Properties/Settings.settings
+++ b/SCME.ProfileBuilder/Properties/Settings.settings
@@ -9,7 +9,7 @@
       <Value Profile="(Default)">IVAN-PC\SQLEXPRESS01</Value>
     </Setting>
     <Setting Name="MSSQLDatabase" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">SCME_ResultsDB</Value>
+      <Value Profile="(Default)">SCME_ResultsDBTest</Value>
     </Setting>
     <Setting Name="MSSQLIntegratedSecurity" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
