--- a/FastTest/packages.config
+++ b/FastTest/packages.config
@@ -4,5 +4,7 @@
   <package id="Fody" version="6.0.0" targetFramework="net472" developmentDependency="true" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks" version="3.0.0-alpha0223" targetFramework="net472" />
+  <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net472" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.0.1" targetFramework="net472" />
   <package id="PropertyChanged.Fody" version="3.1.3" targetFramework="net472" />
 </packages>
