local and sync state bugfix

--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -105,7 +105,7 @@
         <value>True</value>
       </setting>
       <setting name="IsLocal" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="DisableLogDB" serializeAs="String">
         <value>False</value>
@@ -195,7 +195,7 @@
         <value>True</value>
       </setting>
       <setting name="MMECode" serializeAs="String">
-        <value>MME005</value>
+        <value>A</value>
       </setting>
       <setting name="QrrTqNode" serializeAs="String">
         <value>10</value>
