--- a/SCME.UI/app.config
+++ b/SCME.UI/app.config
@@ -152,7 +152,7 @@
         <value>False</value>
       </setting>
       <setting name="MMECode" serializeAs="String">
-        <value>MME005</value>
+        <value>A</value>
       </setting>
       <setting name="TOUIsVisible" serializeAs="String">
         <value>True</value>
