--- a/SCME.UI/Properties/Settings.settings
+++ b/SCME.UI/Properties/Settings.settings
@@ -111,7 +111,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="MMECode" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">MME005</Value>
+      <Value Profile="(Default)">A</Value>
     </Setting>
     <Setting Name="TOUIsVisible" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
