--- a/SCME.DatabaseServer/Properties/Settings.settings
+++ b/SCME.DatabaseServer/Properties/Settings.settings
@@ -5,20 +5,20 @@
     <Setting Name="DBIntegratedSecurity" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="DbPath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">LELIKK-PC</Value>
-    </Setting>
     <Setting Name="DBName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">SCME_ResultsDB</Value>
     </Setting>
-    <Setting Name="DBUser" Type="System.String" Scope="Application">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="DBPassword" Type="System.String" Scope="Application">
-      <Value Profile="(Default)" />
-    </Setting>
     <Setting Name="LogPathTemplate" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Logs\DatabaseServer_{0}.log</Value>
+    </Setting>
+    <Setting Name="DbPath" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">IVAN-PC\SQLEXPRESS01</Value>
+    </Setting>
+    <Setting Name="DBUser" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">sa</Value>
+    </Setting>
+    <Setting Name="DBPassword" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">qwerty_123</Value>
     </Setting>
   </Settings>
 </SettingsFile>
