--- a/SCME.UI/Properties/Settings.settings
+++ b/SCME.UI/Properties/Settings.settings
@@ -24,7 +24,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="TechPassword" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">1234</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="Localization" Type="System.String" Scope="Application">
       <Value Profile="(Default)">ru-RU</Value>
@@ -51,7 +51,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="FTDIPresent" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="CommExIsVisible" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
@@ -66,7 +66,7 @@
       <Value Profile="(Default)">AccountsConfig\Accounts.xml</Value>
     </Setting>
     <Setting Name="FTDIIsInUse" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="ClampIsVisible" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
@@ -111,7 +111,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="MMECode" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">MME002</Value>
+      <Value Profile="(Default)">A</Value>
     </Setting>
   </Settings>
 </SettingsFile>
