fixed bug due to which when updating the profile mme codes were not updated correctly (PB)

--- a/SCME.ProfileBuilder/App.config
+++ b/SCME.ProfileBuilder/App.config
@@ -49,9 +49,6 @@
       <setting name="MSSQLServer" serializeAs="String">
         <value>IVAN-PC\SQLEXPRESS01</value>
       </setting>
-      <setting name="MSSQLDatabase" serializeAs="String">
-        <value>SCME_ResultsDB</value>
-      </setting>
       <setting name="MSSQLIntegratedSecurity" serializeAs="String">
         <value>False</value>
       </setting>
@@ -72,6 +69,9 @@
       </setting>
       <setting name="MSSQLPassword" serializeAs="String">
         <value>qwerty_123</value>
+      </setting>
+      <setting name="MSSQLDatabase" serializeAs="String">
+        <value>SCME_ResultsDBTest</value>
       </setting>
     </SCME.ProfileBuilder.Properties.Settings>
   </applicationSettings>
