--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -116,7 +116,7 @@
                 <value>True</value>
             </setting>
             <setting name="IsLocal" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="DisableLogDB" serializeAs="String">
                 <value>False</value>
