Test commit merge US 03

--- a/SCME.DatabaseServer/App.config
+++ b/SCME.DatabaseServer/App.config
@@ -44,7 +44,7 @@
         <value>False</value>
       </setting>
       <setting name="DBName" serializeAs="String">
-        <value>SCME_ResultsDB</value>
+        <value>SCME_ResultsDBTest</value>
       </setting>
       <setting name="DBPassword" serializeAs="String">
         <value>qwerty_123</value>
