--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -39,6 +39,9 @@
       <service name="SCME.Service.DatabaseServer">
         <endpoint address="net.tcp://127.0.0.1:800/SCME/SCME.IO.DatabaseService" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" name="DatabaseCommunicationInt" bindingNamespace="" contract="SCME.Types.IDatabaseCommunicationService" />
       </service>
+      <service name="SCME.InterfaceImplementations.NewImplement.SQLite.SQLiteDbService">
+        <endpoint address="net.tcp://127.0.0.1:800/SCME/LocalDatabase" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" name="LocalDatabase" contract="SCME.Types.Database.IDbService"/>
+      </service>
     </services>
 
     <client>
