--- a/SCME.DatabaseServer/Properties/Settings.settings
+++ b/SCME.DatabaseServer/Properties/Settings.settings
@@ -6,7 +6,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="DBName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">SCME_ResultsDB</Value>
+      <Value Profile="(Default)">SCME_ResultsDBTest</Value>
     </Setting>
     <Setting Name="DBPassword" Type="System.String" Scope="Application">
       <Value Profile="(Default)">qwerty_123</Value>
