--- a/SCME.UI/app.config
+++ b/SCME.UI/app.config
@@ -37,6 +37,7 @@
     <client>
       <endpoint address="net.tcp://127.0.0.1:800/SCME/SCME.IO.ControlService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.IExternalControl" name="SCME.Service.ExternalControl"/>
       <endpoint address="net.tcp://127.0.0.1:800/SCME/SCME.IO.DatabaseService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.IDatabaseCommunicationService" name="SCME.Service.DatabaseServer"/>
+      <endpoint address="net.tcp://127.0.0.1:800/SCME/LocalDatabase" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" name="LocalDatabase" contract="SCME.Types.Database.IDbService" />
       <endpoint address="net.tcp://127.0.0.1:810/SCME/SCME.IO.CentralDatabaseService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.DatabaseServer.ICentralDatabaseService" name="SCME.CentralDatabaseService"/>
     </client>
     
