--- a/SCME.Service/SCME.SERVICE.csproj
+++ b/SCME.Service/SCME.SERVICE.csproj
@@ -91,6 +91,7 @@
   <ItemGroup>
     <Compile Include="BroadcastCommunication.cs" />
     <Compile Include="IO\IOATU.cs" />
+    <Compile Include="IO\IoDbSync.cs" />
     <Compile Include="IO\IOTOU.cs" />
     <Compile Include="IO\IOdVdt.cs" />
     <Compile Include="IO\IoIH.cs" />
