BF 10, sync with new DB logic, IOBvt

--- a/SCME.DatabaseServer/App.config
+++ b/SCME.DatabaseServer/App.config
@@ -32,6 +32,9 @@
       <service name="SCME.InterfaceImplementations.SQLCentralDatabaseService">
         <endpoint address="net.tcp://localhost:810/SCME/SCME.IO.CentralDatabaseService" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" name="SCME.CentralDatabaseService" bindingNamespace="" contract="SCME.Types.DatabaseServer.ICentralDatabaseService" />
       </service>
+      <service name="SCME.InterfaceImplementations.NewImplement.MSSQL.MSSQLDbService">
+        <endpoint address="net.tcp://127.0.0.1:810/SCME/CentralDatabase" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" name="CentralDatabase" contract="SCME.Types.Database.IDbService"/>
+      </service>
     </services>
   </system.serviceModel>
   <startup>
