--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -47,6 +47,7 @@
     <client>
       <endpoint address="net.tcp://PROTONETX-SERVE:802/SCME/SCME.PrintingService.MME" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.IPrintingService" name="SCME.PrintingService" />
       <endpoint address="net.tcp://127.0.0.1:810/SCME/SCME.IO.CentralDatabaseService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.DatabaseServer.ICentralDatabaseService" name="SCME.CentralDatabaseService" />
+      <endpoint address="net.tcp://127.0.0.1:810/SCME/CentralDatabase" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.Database.IDbService" name="SCME.CentralDatabase" />
     </client>
 
   </system.serviceModel>
@@ -108,7 +109,7 @@
         <value>True</value>
       </setting>
       <setting name="IsLocal" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="DisableLogDB" serializeAs="String">
         <value>False</value>
