--- a/SCME.UI/app.config
+++ b/SCME.UI/app.config
@@ -153,7 +153,7 @@
         <value>False</value>
       </setting>
       <setting name="MMECode" serializeAs="String">
-        <value>A</value>
+        <value>MME006</value>
       </setting>
       <setting name="TOUIsVisible" serializeAs="String">
         <value>True</value>
