--- a/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
+++ b/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
@@ -99,9 +99,7 @@
     <Compile Include="DataTemplates\MmeCodeCheckboxDataTemplate.xaml.cs">
       <DependentUpon>MmeCodeCheckboxDataTemplate.xaml</DependentUpon>
     </Compile>
-    <Compile Include="DataTemplates\TestParameters\ClampCommutationDataTemplate.xaml.cs">
-      <DependentUpon>ClampCommutationDataTemplate.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="IValueConverters\BvtParametersToVisibilityConverter.cs" />
     <Compile Include="IValueConverters\VtmConverters.cs" />
     <Compile Include="IValueConverters\BvtTypeToStringConverter.cs" />
     <Compile Include="IValueConverters\FrequencyDivisorToFrequency.cs" />
@@ -137,7 +135,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="DataTemplates\TestParameters\ClampCommutationDataTemplate.xaml" />
     <Page Include="DataTemplates\TestParameters\RACDataTemplate.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -260,6 +257,7 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Styles\Fonts.xaml" />
+    <Page Include="Styles\Label.xaml" />
     <Page Include="Styles\ListViewItemProfile.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
