bug fix, BF 16 IGT, UI PB interface.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ bld/
 
 binServer/
 binProfileBuilder/
+binProfileBuilder.zip
 mme_software.zip
 
 # Visual Studio 2015/2017 cache/options directory
