--- a/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
+++ b/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
@@ -89,6 +89,7 @@
       <DependentUpon>DialogWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="CustomControls\DragGrid.cs" />
+    <Compile Include="CustomControls\GridTransform4T2.cs" />
     <Compile Include="CustomControls\NumericUpDown.cs" />
     <Compile Include="CustomControls\PanelButton.xaml.cs">
       <DependentUpon>PanelButton.xaml</DependentUpon>
@@ -264,6 +265,10 @@
     </Page>
     <Page Include="Styles\ListViewItemTestParameter.xaml" />
     <Page Include="Styles\NumericUpDown.xaml" />
+    <Page Include="Styles\ProfileHierarchicalDataTemplate.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\RadioButton.xaml" />
     <Page Include="Styles\Sizes.xaml" />
     <Page Include="Styles\TextBox.xaml" />
