Server (new service name) Profile page UI design

--- a/SCME.UI/app.config
+++ b/SCME.UI/app.config
@@ -150,7 +150,7 @@
         <value>True</value>
       </setting>
       <setting name="SpecialMeasureForUse" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="TOUIsVisible" serializeAs="String">
         <value>True</value>
