--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -109,7 +109,7 @@
         <value>True</value>
       </setting>
       <setting name="IsLocal" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="DisableLogDB" serializeAs="String">
         <value>False</value>
