bug fix db sync lag and load profiles lag. bug fix localization.

--- a/SCME.UI/app.config
+++ b/SCME.UI/app.config
@@ -72,7 +72,7 @@
         <value />
       </setting>
       <setting name="Localization" serializeAs="String">
-        <value>ru-RU</value>
+        <value>en-EN</value>
       </setting>
       <setting name="PlotUserSL" serializeAs="String">
         <value>False</value>
