--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -199,7 +199,7 @@
         <value>True</value>
       </setting>
       <setting name="MMECode" serializeAs="String">
-        <value>MME009</value>
+        <value>A</value>
       </setting>
       <setting name="QrrTqNode" serializeAs="String">
         <value>10</value>
