Forced synchronization if there was an update for the central database. KEYBOARD for validation Textbox. Total profiles on the login page. Placeholder. Bug fix loading profiles (internaciolization semicolon).

--- a/SCME.InterfaceImplementations/SCME.InterfaceImplementations.csproj
+++ b/SCME.InterfaceImplementations/SCME.InterfaceImplementations.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Common\DbService\DbServiceLoad.cs" />
     <Compile Include="Common\DbService\DbServiceSave.cs" />
     <Compile Include="Common\ProfileCache.cs" />
+    <Compile Include="Float.cs" />
     <Compile Include="NewImplement\MSSQL\MSSQLDbService.cs" />
     <Compile Include="NewImplement\SQLite\SQLiteDbService.cs" />
     <Compile Include="Common\TDbCommandParameter.cs" />
