--- a/SCME.ProfileBuilder/App.config
+++ b/SCME.ProfileBuilder/App.config
@@ -56,7 +56,7 @@
         <value>tn1578</value>
       </setting>
       <setting name="SQLiteFileName" serializeAs="String">
-        <value>C:\Users\Ivan\Desktop\Работа\mme_software\bin\Db\SCME_ResultsDB_Local.sqlite</value>
+        <value>C:\Users\Ivan\Desktop\Работа\mme_software\Debug\UIService\Db\SCME_ResultsDB_Local.sqlite</value>
       </setting>
       <setting name="SQLTimeout" serializeAs="String">
         <value>5</value>
