--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -46,8 +46,8 @@
 
     <client>
       <endpoint address="net.tcp://PROTONETX-SERVE:802/SCME/SCME.PrintingService.MME" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.IPrintingService" name="SCME.PrintingService" />
-      <endpoint address="net.tcp://192.168.0.134:710/SCME/SCME.IO.CentralDatabaseService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.DatabaseServer.ICentralDatabaseService" name="SCME.CentralDatabaseService" />
-      <endpoint address="net.tcp://192.168.0.134:710/SCME/CentralDatabase" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.Database.IDbService" name="SCME.CentralDatabase" />
+      <endpoint address="net.tcp://127.0.0.1:710/SCME/SCME.IO.CentralDatabaseService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.DatabaseServer.ICentralDatabaseService" name="SCME.CentralDatabaseService" />
+      <endpoint address="net.tcp://127.0.0.1:710/SCME/CentralDatabase" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.Database.IDbService" name="SCME.CentralDatabase" />
     </client>
 
   </system.serviceModel>
@@ -199,7 +199,7 @@
         <value>True</value>
       </setting>
       <setting name="MMECode" serializeAs="String">
-        <value>A</value>
+        <value>MME008</value>
       </setting>
       <setting name="QrrTqNode" serializeAs="String">
         <value>10</value>
