--- a/SCME.WpfControlLibrary/app.config
+++ b/SCME.WpfControlLibrary/app.config
@@ -16,6 +16,9 @@
             <setting name="LastSelectedMMECode" serializeAs="String">
                 <value>MME005</value>
             </setting>
+            <setting name="IsTouchUI" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SCME.WpfControlLibrary.Properties.Settings>
     </userSettings>
 </configuration>
