--- a/SCME.WpfControlLibrary/Properties/Settings.settings
+++ b/SCME.WpfControlLibrary/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="FontScaling" Type="System.Double" Scope="User">
       <Value Profile="(Default)">100</Value>
     </Setting>
+    <Setting Name="IsTouchUI" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
