--- a/SCME.ProfileBuilder/App.config
+++ b/SCME.ProfileBuilder/App.config
@@ -47,13 +47,13 @@
         <value>ru-RU</value>
       </setting>
       <setting name="MSSQLServer" serializeAs="String">
-        <value>192.168.0.134,1444</value>
+        <value>IVAN-PC\SQLEXPRESS01</value>
       </setting>
       <setting name="MSSQLIntegratedSecurity" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="MSSQLUserId" serializeAs="String">
-        <value>tn1578</value>
+        <value>sa</value>
       </setting>
       <setting name="SQLiteFileName" serializeAs="String">
         <value>C:\Users\Ivan\Desktop\Работа\mme_software\Debug\UIService\Db\SCME_ResultsDB_Local.sqlite</value>
@@ -65,10 +65,10 @@
         <value>True</value>
       </setting>
       <setting name="TypeDb" serializeAs="String">
-        <value>SQLite</value>
+        <value>MSSQL</value>
       </setting>
       <setting name="MSSQLPassword" serializeAs="String">
-        <value>Proton20</value>
+        <value>qwerty_123</value>
       </setting>
       <setting name="MSSQLDatabase" serializeAs="String">
         <value>SCME_ResultsDBTest</value>
