--- a/SCME.ProfileBuilder/App.config
+++ b/SCME.ProfileBuilder/App.config
@@ -34,7 +34,7 @@
     </protocolMapping>
 
     <client>
-      <endpoint address="net.tcp://192.168.0.134:820/SCME/SCME.IO.CentralDatabaseService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.DatabaseServer.ICentralDatabaseService" name="SCME.CentralDatabaseService"/>
+      <endpoint address="net.tcp://127.0.0.1:710/SCME/SCME.IO.CentralDatabaseService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.DatabaseServer.ICentralDatabaseService" name="SCME.CentralDatabaseService"/>
     </client>
 
   </system.serviceModel>
@@ -56,7 +56,7 @@
         <value>sa</value>
       </setting>
       <setting name="SQLiteFileName" serializeAs="String">
-        <value>C:\Users\Ivan\Desktop\Работа\mme_software\Debug\UIService\Db\SCME_ResultsDB_Local.sqlite</value>
+        <value>C:\Users\Ivan\Desktop\SQLiteDatabaseBrowserPortable\SCME_ResultsDB_Local(1).sqlite</value>
       </setting>
       <setting name="SQLTimeout" serializeAs="String">
         <value>5</value>
