--- a/SCME.Types/packages.config
+++ b/SCME.Types/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Fody" version="6.0.0" targetFramework="net40" developmentDependency="true" />
   <package id="PropertyChanged.Fody" version="3.1.3" targetFramework="net40" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net40" />
 </packages>
