--- a/SCME.UI/packages.config
+++ b/SCME.UI/packages.config
@@ -5,4 +5,5 @@
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net461" />
   <package id="MahApps.Metro.IconPacks" version="3.0.0-alpha0223" targetFramework="net461" />
   <package id="PropertyChanged.Fody" version="3.0.1" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
