--- a/SCME.Service/SCME.SERVICE.csproj
+++ b/SCME.Service/SCME.SERVICE.csproj
@@ -150,6 +150,7 @@
     <None Include="Db\SCME_LogsDB.sqlite">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="Db\SCME_ResultsDB_LocalOld.sqlite" />
     <None Include="Db\SCME_ResultsDB_Local.sqlite">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
