Catch ClearCacheByMmeCode error

--- a/SCME.ProfileBuilder/App.config
+++ b/SCME.ProfileBuilder/App.config
@@ -56,7 +56,7 @@
         <value>sa</value>
       </setting>
       <setting name="SQLiteFileName" serializeAs="String">
-        <value>C:\Users\Ivan\Desktop\SQLiteDatabaseBrowserPortable\SCME_ResultsDB_Local(1).sqlite</value>
+        <value>D:\mme_software\DB\SCME_ResultsDB_Local - Copy.sqlite</value>
       </setting>
       <setting name="SQLTimeout" serializeAs="String">
         <value>5</value>
@@ -65,7 +65,7 @@
         <value>True</value>
       </setting>
       <setting name="TypeDb" serializeAs="String">
-        <value>MSSQL</value>
+        <value>SQLite</value>
       </setting>
       <setting name="MSSQLPassword" serializeAs="String">
         <value>qwerty_123</value>
