Class device, class by RT UI profile page

--- a/SCME.ProfileBuilder/App.config
+++ b/SCME.ProfileBuilder/App.config
@@ -56,7 +56,7 @@
         <value>sa</value>
       </setting>
       <setting name="SQLiteFileName" serializeAs="String">
-        <value>D:\mme_software\DB\SCME_ResultsDB_Local - Copy.sqlite</value>
+        <value>C:\Users\Ivan\Desktop\SCME_ResultsDB_Local.sqlite</value>
       </setting>
       <setting name="SQLTimeout" serializeAs="String">
         <value>5</value>
