UI BF Safety BF Keyboard BF

--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -10,7 +10,7 @@
 
     <bindings>
       <netTcpBinding>
-        <binding name="DefaultTcpBinding" receiveTimeout="00:25:00" sendTimeout="00:25:00" maxReceivedMessageSize="2147483647" maxBufferPoolSize="2147483647" maxBufferSize="2147483647" maxConnections="100">
+        <binding name="DefaultTcpBinding" receiveTimeout="08:00:00" sendTimeout="00:25:00" maxReceivedMessageSize="2147483647" maxBufferPoolSize="2147483647" maxBufferSize="2147483647" maxConnections="100">
           <security mode="None">
             <transport clientCredentialType="None" />
             <message clientCredentialType="None" />
@@ -46,8 +46,8 @@
 
     <client>
       <endpoint address="net.tcp://PROTONETX-SERVE:802/SCME/SCME.PrintingService.MME" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.IPrintingService" name="SCME.PrintingService" />
-      <endpoint address="net.tcp://192.168.0.134:710/SCME/SCME.IO.CentralDatabaseService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.DatabaseServer.ICentralDatabaseService" name="SCME.CentralDatabaseService" />
-      <endpoint address="net.tcp://192.168.0.134:710/SCME/CentralDatabase" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.Database.IDbService" name="SCME.CentralDatabase" />
+      <endpoint address="net.tcp://192.168.0.134:730/SCME/SCME.IO.CentralDatabaseService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.DatabaseServer.ICentralDatabaseService" name="SCME.CentralDatabaseService" />
+      <endpoint address="net.tcp://192.168.0.134:730/SCME/CentralDatabase" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.Database.IDbService" name="SCME.CentralDatabase" />
     </client>
 
   </system.serviceModel>
@@ -109,7 +109,7 @@
         <value>True</value>
       </setting>
       <setting name="IsLocal" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="DisableLogDB" serializeAs="String">
         <value>False</value>
@@ -199,7 +199,7 @@
         <value>True</value>
       </setting>
       <setting name="MMECode" serializeAs="String">
-        <value>A</value>
+        <value>MME009</value>
       </setting>
       <setting name="QrrTqNode" serializeAs="String">
         <value>10</value>
