--- a/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
+++ b/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
@@ -49,22 +49,11 @@
       <HintPath>..\packages\ControlzEx.3.0.2.4\lib\net45\ControlzEx.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MahApps.Metro, Version=1.6.5.1, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\MahApps.Metro.1.6.5\lib\net46\MahApps.Metro.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MahApps.Metro.IconPacks, Version=3.0.0.0, Culture=neutral, PublicKeyToken=0c0d510f9915137a">
-      <HintPath>..\packages\MahApps.Metro.IconPacks.3.0.0-alpha0213\lib\net46\MahApps.Metro.IconPacks.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MahApps.Metro.IconPacks.Core, Version=3.0.0.0, Culture=neutral, PublicKeyToken=0c0d510f9915137a">
-      <HintPath>..\packages\MahApps.Metro.IconPacks.3.0.0-alpha0213\lib\net46\MahApps.Metro.IconPacks.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Microsoft.Xaml.Behaviors, Version=1.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <HintPath>..\packages\Microsoft.Xaml.Behaviors.Wpf.1.0.1\lib\net45\Microsoft.Xaml.Behaviors.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationFramework.Aero" />
     <Reference Include="PropertyChanged, Version=3.1.3.0, Culture=neutral, PublicKeyToken=ee3ee20bcf148ddd, processorArchitecture=MSIL">
       <HintPath>..\packages\PropertyChanged.Fody.3.1.3\lib\net40\PropertyChanged.dll</HintPath>
     </Reference>
@@ -117,6 +106,7 @@
       <DependentUpon>UdsmUrsmDataTemplate.xaml</DependentUpon>
     </Compile>
     <Compile Include="IValueConverters\BvtParametersToVisibilityConverter.cs" />
+    <Compile Include="IValueConverters\GridLengthConverter.cs" />
     <Compile Include="IValueConverters\VtmConverters.cs" />
     <Compile Include="IValueConverters\BvtTypeToStringConverter.cs" />
     <Compile Include="IValueConverters\FrequencyDivisorToFrequency.cs" />
@@ -135,19 +125,6 @@
     <Compile Include="ViewModels\MmeCodeCheckboxDataTemplateVm.cs" />
     <Compile Include="ViewModels\ProfilesPageVM.cs" />
     <Compile Include="ViewModels\ProfilesPage\AddTestParametrUserControlVM.cs" />
-    <Compile Include="Windows\DynamicResourcesCahnger.xaml.cs">
-      <DependentUpon>DynamicResourcesChanger.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Wrappers\AccentWrapper.cs" />
-    <Compile Include="CustomControls\AccentAndThemeUserControl.xaml.cs">
-      <DependentUpon>AccentAndThemeUserControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="ViewModels\AccentAndThemeUserControlVM.cs" />
-    <Compile Include="Wrappers\AppThemeWrapper.cs" />
-    <Page Include="CustomControls\AccentAndThemeUserControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="CustomControls\DialogWindow.xaml" />
     <Page Include="CustomControls\PanelButton.xaml" />
     <Page Include="CustomControls\ValidatingTextBox.xaml">
@@ -248,14 +225,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Resources\Icons.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Resources\IconsNonShared.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Include="Resources\ObjectDataProvider.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -275,18 +244,31 @@
     </Page>
     <Page Include="Styles\DataTemplateForTestParameters.xaml" />
     <Page Include="Styles\Fonts.xaml" />
+    <Page Include="Styles\Icons.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\Label.xaml" />
     <Page Include="Styles\ListViewItemTestParameter.xaml" />
+    <Page Include="Styles\ListViewProfile.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\NumericUpDown.xaml" />
+    <Page Include="Styles\Path.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\PlaceHolderValidatingTextBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Styles\RadioButton.xaml" />
+    <Page Include="Styles\ScrollBar.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\Sizes.xaml" />
     <Page Include="Styles\TextBox.xaml" />
-    <Page Include="Styles\TreeViewItemProfile.xaml" />
-    <Page Include="Windows\DynamicResourcesChanger.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IValueConverters\VtmTestTypeToStringConverter.cs" />
@@ -320,13 +302,6 @@
       <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <Resource Include="Resources\Entypo.ttf" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\WindowsIcons-license.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\Entypo-license.txt" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SCME.InterfaceImplementations\SCME.InterfaceImplementations.csproj">
