--- a/SCME.ProfileBuilder/Properties/Settings.settings
+++ b/SCME.ProfileBuilder/Properties/Settings.settings
@@ -14,9 +14,6 @@
     <Setting Name="MSSQLUserId" Type="System.String" Scope="Application">
       <Value Profile="(Default)">sa</Value>
     </Setting>
-    <Setting Name="SQLiteFileName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\Users\Ivan\Desktop\Работа\mme_softwareUS03\bin\Db\SCME_ResultsDB_Local.sqlite</Value>
-    </Setting>
     <Setting Name="SQLTimeout" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">5</Value>
     </Setting>
@@ -26,14 +23,17 @@
     <Setting Name="LastSelectedMMECode" Type="System.String" Scope="User">
       <Value Profile="(Default)">MME005</Value>
     </Setting>
-    <Setting Name="TypeDb" Type="SCME.Types.TypeDb" Scope="Application">
-      <Value Profile="(Default)">MSSQL</Value>
-    </Setting>
     <Setting Name="MSSQLPassword" Type="System.String" Scope="Application">
       <Value Profile="(Default)">qwerty_123</Value>
     </Setting>
+    <Setting Name="SQLiteFileName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">C:\Users\Ivan\Desktop\SCME_ResultsDB_Local.sqlite</Value>
+    </Setting>
+    <Setting Name="TypeDb" Type="SCME.Types.TypeDb" Scope="Application">
+      <Value Profile="(Default)">SQLite</Value>
+    </Setting>
     <Setting Name="MSSQLDatabase" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">SCME_ResultsDB</Value>
+      <Value Profile="(Default)">SCME_ResultsDBTest</Value>
     </Setting>
   </Settings>
 </SettingsFile>
